--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,34 +4,47 @@ body {
   color: hsl(236, 100%, 87%);
 }
 
+.main-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 0 20px;
+}
+
+.profile-card {
+  background-color: hsl(235, 46%, 20%);
+  border-radius: 15px;
+}
 .profile-card .profile {
   background-color: hsl(246, 80%, 60%);
   padding: 30px;
   display: flex;
   align-items: center;
   gap: 20px;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 .profile-card .profile img {
-  height: 70px;
+  height: 60px;
   aspect-ratio: 1/1;
   border: 3px solid white;
   border-radius: 50%;
 }
 .profile-card .profile div p {
   margin: 5px 0;
+  font-size: 0.85em;
 }
 .profile-card .profile div h1 {
   margin: 5px 0;
-  font-size: 1.6em;
+  font-size: 1.4em;
   font-weight: 300;
   color: white;
 }
-.profile-card .time-options {
+
+.time-options {
   display: flex;
   justify-content: space-between;
-  padding: 30px;
-  border-radius: 20px;
+  border-radius: 15px;
+  padding: 20px 30px;
 }
 
 .content-container {
