--- a/styles.scss
+++ b/styles.scss
@@ -25,7 +25,11 @@ $selfcare-card: hsl(43, 84%, 65%);
 }
 
 @mixin card-border{
-  border-radius: 15px;
+  border-radius: 10px;
+}
+
+@mixin card-padding{
+  padding: 15px 10px;
 }
 
 body{
@@ -82,6 +86,37 @@ body{
   @include mobile-card;
   @include card-border;
   padding: 20px 30px;
+}
+
+.card {
+  .back{
+    display: flex;
+    justify-content: end;
+    @include card-border;
+
+    img{
+      width: 60px;
+      margin-right: 30px;
+    }
+  }
+  .work{
+    background-color: $work-card;
+  }
+  .play{
+    background-color: $play-card;
+  }
+  .study{
+    background-color: $study-card;
+  }
+  .exercise{
+    background-color: $exercise-card;
+  }
+  .social {
+    background-color: $social-card;
+  }
+  .self-care{
+    background-color: $selfcare-card;
+  }
 }
 
 .content-container {
