--- a/styles.scss
+++ b/styles.scss
@@ -4,8 +4,10 @@ $font-stack: Rubik, sans-serif;
 $main-bg: hsl(226, 43%, 10%);
 $profile: hsl(246, 80%, 60%);
 $element-bg: hsl(235, 46%, 20%);
-$element-hover: hsl(235, 45%, 61%);
+$time-option: hsl(235, 45%, 61%);
+$card-hover: hsl(236, 37%, 36%);
 $text-color: hsl(236, 100%, 87%);
+$text-hover: white;
 $header-color: white;
 
 $work-card: hsl(15, 100%, 70%);
@@ -18,6 +20,7 @@ $selfcare-card: hsl(43, 84%, 65%);
 @mixin mobile-card {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 @mixin header-color{
@@ -29,7 +32,7 @@ $selfcare-card: hsl(43, 84%, 65%);
 }
 
 @mixin card-padding{
-  padding: 15px 10px;
+  padding: 25px 20px;
 }
 
 body{
@@ -41,7 +44,6 @@ body{
 .main-container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
   padding: 0 20px;
 }
 
@@ -86,17 +88,32 @@ body{
   @include mobile-card;
   @include card-border;
   padding: 20px 30px;
+
+  >* {
+    color: $time-option;
+    cursor: pointer;
+
+    &:hover{
+      color: $text-hover;
+    }
+  }
 }
 
 .card {
   .back{
     display: flex;
     justify-content: end;
-    @include card-border;
+    overflow: hidden;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 
     img{
-      width: 60px;
-      margin-right: 30px;
+      width: 70px;
+      height: 70px;
+      aspect-ratio: 1 / 1;
+      margin-right: 15px;
+      margin-top: -10px;
+      object-fit: contain;
     }
   }
   .work{
@@ -117,13 +134,44 @@ body{
   .self-care{
     background-color: $selfcare-card;
   }
-}
 
-.content-container {
-  background-color: $element-bg;
+  .content-container {
+    background-color: $element-bg;
+    @include card-padding;
+    @include card-border;
+    cursor: pointer;
 
-  header, main {
-    @include mobile-card;
+    position: relative;
+    top: -25px;
+  
+    &:hover{
+      background-color: $card-hover;
+    }
+
+    header, main {
+      @include mobile-card;
+      span:first-child{
+        color: $header-color;
+      }
+    }
+
+    header{
+      margin-bottom: 8px;
+      span:first-child{
+        font-size: 15px;
+        font-weight: 500;
+      }
+    }
+
+    main{
+      span:first-child {
+        font-size: 27px;
+        font-weight: 300;
+      }
+      span:last-child{
+        font-size: 14px;
+        font-weight: 300;
+      }
+    }  
   }
-
 }
