Fix displayed data on page load

--- a/styles.scss
+++ b/styles.scss
@@ -246,6 +246,7 @@ body{
   
   .time-options{
     @include desktop-card;
+    align-items: flex-start;
     gap: 15px;
     padding: 20px 25px;
   }
